fix vertical gallery modal view on mobile, horizontal still cuts off for now

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -38,7 +38,7 @@
     display: none;
     position: fixed;
     z-index: 2;
-    padding-top: 35px;
+    padding-top: 45px;
     left: 0;
     top: 0;
     width: 100%;
@@ -50,11 +50,12 @@
 /* Modal Content */
 .modal-content {
     position: relative;
+    display: block;
     background-color: #2c2c2d;
     margin: auto;
     padding: 40px;
     width: 90%;
-    height: 900px;
+    max-height: 900px;
     max-width: 1600px;
 }
 
